# Driver-Drowsiness-Detector

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.py
cmake/: CheckSystem.cmake
resource/: executable_icon_resource.rc  resource.qrc
resource/neural_network_model/: neural_network_model.onnx
resource/translation/: ISS-Driver-Drowsiness-Detector_ru_RU.ts
src/: Camera.cpp  Camera.h  ImageRecognizer.cpp  ImageRecognizer.h  MainWindow.cpp  MainWindow.h  main.cpp
src/ui/: mainwindow.ui
src/utils/: RecognitionFrameCounter.h  TextBrowserLogger.cpp  TextBrowserLogger.h  Utils.cpp  Utils.h
